# libredrop-prototype

./: Cargo.toml  README.md
img/: receiver_fsm.dot  sender_fsm.dot
src/: app_data.rs  main.rs  message.proto  proto.rs  session.rs  utils.rs
