[package]
name = "async-demo"
version = "0.1.0"
authors = ["Povilas Balciunas <balciunas90@gmail.com>"]
edition = "2018"

[dependencies]
peer-discovery = { git = "https://github.com/libredrop/peer-discovery-rust", rev = "07709c3" }
unwrap = "1.2.1"
get_if_addrs = "0.5.3"
simple_logger = "1.3.0"
futures = "0.3.1"
log = "0.4.8"
net-literals = "0.1.2"
clap = "2.33.0"
regex = "1.3.1"
hex = "0.4.0"
bincode = "1.2.1"
indicatif = "0.13.0"
futures_codec = { git = 'https://github.com/povilasb/futures-codec', branch = 'serde-codec'}

[dependencies.serde]
version = "1.0.103"
features = ["derive"]

[dependencies.async-std]
version = "1.4.0"
features = ["attributes", "unstable"] # unstable is for sync::channel
